<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lukzieniewicz.gmail.com.swim3.Settings">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Switch
        android:text="@string/size_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:id="@+id/size_switch" />

    <Switch
        android:text="@string/color_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/color_switch" />

    <Button
        android:text="@string/back_and_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:id="@+id/back_button"
        android:onClick="onBackClick" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:id="@+id/night_mode_toggle"
        android:text="@string/night_mode"
        android:checked="false"
        android:textOn="@string/night_mode"
        android:textOff="@string/day_mode"
        android:onClick="onToggleClick" />

    <Button
        android:text="Wyczyść dane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button5"
        android:onClick="onDeleteClick" />
</RelativeLayout>
